--- a/note/Elasticsearch/推荐.md
+++ b/note/Elasticsearch/推荐.md
@@ -202,5 +202,41 @@ Term > Phrase > Term
 
 Completion > Phrase > Term
 
+# 编辑距离算法（Edit Distance）
 
+\## 算法过程
+
+1. str1或str2的长度为0返回另一个字符串的长度。 if(str1.length0) return str2.length; if(str2.length0) return str1.length;
+
+2. 初始化(n+1)*(m+1)的矩阵d，并让第一行和列的值从0开始增长。扫描两字符串（n*m级的），如果：str1[i] == str2[j]，用temp记录它，为0。否则temp记为1。然后在矩阵d[i,j]赋于d[i-1,j]+1 、d[i,j-1]+1、d[i-1,j-1]+temp三者的最小值。
+
+3. 扫描完后，返回矩阵的最后一个值d[n][m]即是它们的距离。
+
+# Finite State Transducer
+
+## 为什么 Elasticsearch/Lucene 检索可以比 mysql 快
+
+Mysql 只有 term dictionary 这一层，是以 b-tree 排序的方式存储在磁盘上的。检索一个 term 需要若干次的 random access 的磁盘操作。而 Lucene 在 term dictionary 的基础上添加了 term index 来加速检索，term index 以树的形式缓存在内存中。从 term index 查到对应的 term dictionary 的 block 位置之后，再去磁盘上找 term，大大减少了磁盘的 random access 次数。
+
+- term index 在内存中是以 FST（finite state transducers）的形式保存的，其特点是非常节省内存。
+- Term dictionary 在磁盘上是以分 block 的方式保存的，一个 block 内部利用公共前缀压缩，比如都是 Ab 开头的单词就可以把 Ab 省去。这样 term dictionary 可以比 b-tree 更节约磁盘空间。
+
+## Term Index
+
+将分词后的term进行排序索引
+
+- mysql对于"term"(即主键，或者索引键)只是做了排序, 并且是大部分是放在磁盘上的，只有B+树的上层才是放在内存中的，查询仍然需要logN的访问磁盘。
+- ES将term分词排序后还做了一次索引，term index，即将term的通用前缀取出，构建成Trie树，通过这个树可以快速的定位到Term dictionary的本term的offset，再经过顺序查找，便可以很快找到本term的posting list。
+
+## FST Finite State Transducer
+
+ FST *可以表示成*FST<Key, Value>的形式
+
+- 空间占用小，通过对词典中单词前缀和后缀的重复利用，压缩了存储空间。
+
+- 查询速度快，O(len(str))的查询时间复杂度。
+
+- 使用FSM(Finite State Machines)作为数据结构
+
+  > FSM(Finite State Machines)有限状态机**: 表示有限个状态（State）集合以及这些状态之间**转移**和动作的数学模型。其中一个状态被标记为**开始状态**，0个或更多的状态被标记为**final状态。一个FSM同一时间只处于1个状态。
 
